force-app/main/default/objects/AbacusTransferNG__c/AbacusTransferNG__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >AbacusTransferNGCompactLayout</compactLayoutAssignment>
    <label>Abacus Transfer NG</label>
    <nameField>
        <displayFormat>ABNG-{0000000}</displayFormat>
        <label>Abacus Transfer NG Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abacus Transfers NG</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>