force-app/main/default/objects/AbacusTransferNG__c/fields/AbacusDocumentId__c.field-meta.xml
<CustomField>
    <fullName>AbacusDocumentId__c</fullName>
    <externalId>true</externalId>
    <label>Abacus Document Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>