force-app/main/default/objects/AbacusTransferNG__c/fields/ApprovedAt__c.field-meta.xml
<CustomField>
    <fullName>ApprovedAt__c</fullName>
    <label>Approved At</label>
    <type>DateTime</type>
</CustomField>