force-app/main/default/objects/AbacusTransferNG__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Abacus Transfer NG (Approved By)</relationshipLabel>
    <relationshipName>AbacusTransferNGApprovedBy</relationshipName>
    <type>Lookup</type>
</CustomField>