force-app/main/default/objects/AbacusTransferNG__c/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>