force-app/main/default/objects/AbacusTransferNG__c/fields/InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>InterfaceType__c</fullName>
    <label>Interface Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Debtor Upsert</fullName>
            </value>
            <value>
                <fullName>Account Supplier Upsert</fullName>
            </value>
            <value>
                <fullName>Invoice Export</fullName>
            </value>
            <value>
                <fullName>Cancellation Export</fullName>
            </value>
            <value>
                <fullName>Staff Hour Export</fullName>
            </value>
            <value>
                <fullName>Currency Import</fullName>
            </value>
            <value>
                <fullName>Project Export</fullName>
            </value>
            <value>
                <fullName>Supplier Invoice Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>