force-app/main/default/objects/AbacusTransferNG__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Abacus Transfers NG</relationshipLabel>
    <relationshipName>AbacusTransfersNG</relationshipName>
    <type>Lookup</type>
</CustomField>