force-app/main/default/objects/AbacusTransferNG__c/fields/LastAttemptAt__c.field-meta.xml
<CustomField>
    <fullName>LastAttemptAt__c</fullName>
    <label>Last Attempt At</label>
    <type>DateTime</type>
</CustomField>