force-app/main/default/objects/AbacusTransferNG__c/fields/LastHttpStatus__c.field-meta.xml
<CustomField>
    <fullName>LastHttpStatus__c</fullName>
    <label>Last HTTP Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>