force-app/main/default/objects/AbacusTransferNG__c/fields/MuleCorrelationId__c.field-meta.xml
<CustomField>
    <fullName>MuleCorrelationId__c</fullName>
    <label>Mule Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>