force-app/main/default/objects/AbacusTransferNG__c/fields/PayloadSnapshot__c.field-meta.xml
<CustomField>
    <fullName>PayloadSnapshot__c</fullName>
    <label>Payload Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>