force-app/main/default/objects/AbacusTransferNG__c/fields/SourceObject__c.field-meta.xml
<CustomField>
    <fullName>SourceObject__c</fullName>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>