force-app/main/default/objects/AbacusTransferNG__c/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordId__c</fullName>
    <externalId>true</externalId>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>