force-app/main/default/objects/AbacusTransferNG__c/fields/SupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>SupplierCosts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Costs</label>
    <referenceTo>SupplierCosts__c</referenceTo>
    <relationshipLabel>Abacus Transfers NG</relationshipLabel>
    <relationshipName>AbacusTransfersNG</relationshipName>
    <type>Lookup</type>
</CustomField>