force-app/main/default/objects/AbacusTransferNG__c/fields/SupplierInvoice__c.field-meta.xml
<CustomField>
    <fullName>SupplierInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Invoice</label>
    <referenceTo>SupplierInvoice__c</referenceTo>
    <relationshipLabel>Abacus Transfers NG</relationshipLabel>
    <relationshipName>AbacusTransfersNG</relationshipName>
    <type>Lookup</type>
</CustomField>