force-app/main/default/objects/AbacusTransferNG__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Direction__c</columns>
    <columns>Status__c</columns>
    <columns>SourceObject__c</columns>
    <columns>LastAttemptAt__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>