force-app/main/default/objects/AbacusTransferNG__c/listViews/Dormant.listView-meta.xml
<ListView>
    <fullName>Dormant</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Direction__c</columns>
    <columns>SourceObject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Dormant</value>
    </filters>
    <label>Dormant</label>
</ListView>