force-app/main/default/objects/AbacusTransferNG__c/listViews/InFlight.listView-meta.xml
<ListView>
    <fullName>InFlight</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Direction__c</columns>
    <columns>SourceObject__c</columns>
    <columns>LastAttemptAt__c</columns>
    <columns>RetryCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>InFlight</value>
    </filters>
    <label>In Flight</label>
</ListView>