force-app/main/default/objects/AbacusTransferNG__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Direction__c</columns>
    <columns>Status__c</columns>
    <columns>SourceObject__c</columns>
    <columns>LastAttemptAt__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sent,Cancelled,DeadLettered</value>
    </filters>
    <label>Open</label>
</ListView>