force-app/main/default/objects/AbacusTransferNG__c/listViews/PendingApproval.listView-meta.xml
<ListView>
    <fullName>PendingApproval</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Direction__c</columns>
    <columns>Account__c</columns>
    <columns>Invoice__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Approval</label>
</ListView>