force-app/main/default/objects/AbacusTransferNG__c/listViews/Sent.listView-meta.xml
<ListView>
    <fullName>Sent</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Direction__c</columns>
    <columns>SourceObject__c</columns>
    <columns>Invoice__c</columns>
    <columns>SentAt__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <label>Sent</label>
</ListView>